<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagen_fondo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_onboarding">

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagen_moto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imagen_fondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nomads_moto">

    </androidx.appcompat.widget.AppCompatImageView>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/titulo"
        android:textAppearance="?textAppearanceTravellingV1H4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_introduccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:justificationMode="inter_word"
        android:text="@string/introduccion"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceTravellingV1Bd1"
        app:layout_constraintEnd_toEndOf="@+id/imagen_fondo"
        app:layout_constraintStart_toStartOf="@+id/imagen_fondo"
        app:layout_constraintTop_toBottomOf="@+id/main_titulo">


    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Continuar"
        app:layout_constraintBottom_toBottomOf="@+id/imagen_moto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen_fondo"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAppearance="?textAppearanceTravellingV1Btt" />



</androidx.constraintlayout.widget.ConstraintLayout>